--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<title>Interactive Drum Kit</title>
 	</head>
 	<body>
-		<h1>Interactive Drum Kit</h1>
+		<h1>Leon's Interactive Drum Kit</h1>
 		<main>
 			<section id="drumkit">
 				<div id="drumkit-buttons">
@@ -735,6 +735,14 @@
 						transform="matrix(0 -1 -1 0 517.5 474)"
 						fill="#231F20"
 					/>
+					<line
+						x1="423.5"
+						y1="192.63"
+						x2="423.5"
+						y2="404.63"
+						stroke="#848E98"
+						stroke-width="3"
+					/>
 					<g id="snare-group">
 						<mask
 							id="path-77-outside-7_9_121"
@@ -1041,14 +1049,6 @@
 						y1="130.393"
 						x2="423.297"
 						y2="185.538"
-						stroke="#848E98"
-						stroke-width="3"
-					/>
-					<line
-						x1="423.5"
-						y1="192.63"
-						x2="423.5"
-						y2="404.63"
 						stroke="#848E98"
 						stroke-width="3"
 					/>
