--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	<body>
 		<h1>Leon's Interactive Drum Kit</h1>
 		<main>
+			<section>
+				<p>
+					<b>SOUND ON!</b><br />
+					Press the drums and cymbols below to play sounds!
+				</p>
+			</section>
 			<section id="drumkit">
 				<div id="drumkit-buttons">
 					<button id="ride"></button>
@@ -1115,7 +1121,7 @@
 				</svg>
 			</section>
 			<section id="controls">
-				<h2>Controls</h2>
+				<h2>Keyboard Controls</h2>
 				<ul>
 					<li><b>T</b> - Crash</li>
 					<li><b>Y</b> - Ride</li>
